<resources>
    <string name="app_name">Map Weather</string>
    <string name="title_activity_map_fragment">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="empty_email">Please enter email !</string>
    <string name="empty_password">Please enter password !</string>
    <string name="invalid_email">Invalid email form</string>
    <string name="invalid_password">Password must be more than 6 characters</string>
    <string name="username">Username</string>
    <string name="error">Error</string>
    <string name="empty_username">Please enter username !</string>
    <string name="invalid_username">Invalid username form</string>
    <string name="create_account">First time here?</string>
    <string name="has_account">Not the first time?</string>
    <string name="map">Map</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark">Bookmark</string>
    <string name="add_to_bookmark">Add place to bookmark?</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="lorem">By adding place to bookmark you will be able to get this place weather info!</string>
    <string name="error_adding">Error adding bookmark</string>
    <string name="added_successfully">Place is added successfully to bookmark</string>
    <string name="error_getting_data">Error getting data</string>
    <string name="city">City</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind speed</string>
    <string name="humidity">Humidity</string>
    <string name="weather">Weather</string>
    <string name="how_to_add">Long click on map to add place to bookmark</string>
    <string name="not_supported">Your device can\'t run this app - Update google play services</string>
    <string name="need_to_add_permissions">Add permission manually so, app can work  well</string>
    <string name="remove_bookmark">Are you sure you want to remove bookmark?</string>
    <string name="remove">Remove</string>
    <string name="title_activity_maps">Map</string>
    <string name="error_upload_img">Error updating image</string>
    <string name="upload_img_success">Image updated successfully</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add_to_widget">Add to widget</string>
    <string name="added_to_widget">Bookmark is added to widget</string>
    <string name="google_play_services_error_msg">You can\'t make map request, update google play service version</string>
    <string name="add_pic_content">This image view to add profile pic</string>
    <string name="profile_pic_content">This image view to view user profile pic</string>
    <string name="add_profile_pic_content">This image view to add profile pic</string>
    <string name="empty_recycler_content">This image view to be viewed when recycler is empty</string>
    <string name="city_pic_content">This image view to view city name</string>
    <string name="city_weather_pic_content">This image view to view city weather</string>
    <string name="city_temp_pic_content">This image view to view city temperature</string>
    <string name="city_wind_pic_content">This image view to view city wind</string>
    <string name="logo_content">This image view to view app logo</string>
    <string name="bookmark_content">This image view to view bookmark name</string>
    <string name="delete_content">This image view to view delete button</string>
    <string name="no_connection_content">This image view to be viewed when there is no connection</string>
</resources>
