<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_padding_size_medium"
    android:background="@color/low_white"
    app:cardCornerRadius="@dimen/margin_padding_size_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clipToPadding="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_size_micro"
            android:text="@string/add_to_bookmark"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_size_micro"
            android:text="@string/lorem"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_large" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="@dimen/margin_padding_size_micro"
            android:background="@color/divider" />

        <Button
            android:id="@+id/dialog_add_bookmark_add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/add"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="@dimen/margin_padding_size_micro"
            android:background="@color/divider" />

        <Button
            android:id="@+id/dialog_add_bookmark_cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_size_micro"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.v7.widget.CardView>