<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ingredient_widget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/gradient_bg"
        android:gravity="center"
        android:padding="@dimen/margin_padding_size_micro">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="@dimen/margin_padding_size_micro"
            android:src="@drawable/app_logo"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_padding_size_small"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_padding_size_small">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_padding_size_medium"
                android:contentDescription="@string/city_pic_content"
                android:src="@drawable/pin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_padding_size_micro"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/margin_padding_size_micro">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/bookmark_widget_city_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_padding_size_small">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_padding_size_medium"
                android:contentDescription="@string/city_weather_pic_content"
                android:src="@drawable/weather" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_padding_size_micro"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/margin_padding_size_micro">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weather"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/bookmark_widget_city_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_padding_size_small">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_padding_size_medium"
                android:contentDescription="@string/city_temp_pic_content"
                android:src="@drawable/temperature" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_padding_size_micro"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/margin_padding_size_micro">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/bookmark_widget_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_micro"
                    android:text="@string/humidity"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/bookmark_widget_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_padding_size_small">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_padding_size_medium"
                android:contentDescription="@string/city_wind_pic_content"
                android:src="@drawable/wind" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_padding_size_micro"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/margin_padding_size_micro">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/bookmark_widget_wind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>