<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.DetailsActivity">

    <include
        android:id="@+id/progress_layout"
        layout="@layout/progressbar"
        android:visibility="gone" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:padding="@dimen/margin_padding_size_small"
        app:cardCornerRadius="@dimen/text_size_micro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_padding_size_medium"
                android:contentDescription="@string/city_pic_content"
                android:src="@drawable/pin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_padding_size_micro"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/margin_padding_size_micro">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/details_activity_city_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_size_medium"
        android:layout_marginStart="@dimen/margin_padding_size_medium"
        android:layout_marginTop="@dimen/margin_padding_size_micro"
        android:padding="@dimen/margin_padding_size_small"
        app:cardCornerRadius="@dimen/text_size_micro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_padding_size_medium"
                android:contentDescription="@string/city_weather_pic_content"
                android:src="@drawable/weather" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_padding_size_micro"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/margin_padding_size_micro">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weather"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/details_activity_city_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_size_medium"
        android:layout_marginStart="@dimen/margin_padding_size_medium"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:padding="@dimen/margin_padding_size_small"
        app:cardCornerRadius="@dimen/text_size_micro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_padding_size_medium"
                android:contentDescription="@string/city_temp_pic_content"
                android:src="@drawable/temperature" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_padding_size_micro"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/margin_padding_size_micro">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/details_activity_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_micro"
                    android:text="@string/humidity"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/details_activity_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_size_medium"
        android:layout_marginStart="@dimen/margin_padding_size_medium"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:padding="@dimen/margin_padding_size_small"
        app:cardCornerRadius="@dimen/text_size_micro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_padding_size_medium"
                android:contentDescription="@string/city_wind_pic_content"
                android:src="@drawable/wind" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_padding_size_micro"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/margin_padding_size_micro">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/details_activity_wind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/details_activity_add_to_widget"
        style="@style/ButtonNormal"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_padding_size_large"
        android:text="@string/add_to_widget" />
</LinearLayout>