<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="ScrollViewCount">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/margin_padding_size_large"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_margin="@dimen/margin_padding_size_small"
                android:scaleType="centerInside"
                android:src="@drawable/app_logo"
                tools:ignore="ContentDescription" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_sign_in_email_input_layout"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fragment_sign_in_email_edit_text"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:drawableStart="@drawable/ic_mail_outline_24dp"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_sign_in_password_input_layout"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fragment_sign_in_password_edit_text"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:drawableStart="@drawable/ic_lock_outline_24dp"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/fragment_sign_in_button"
                style="@style/ButtonNormal"
                android:layout_width="168dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:text="@string/sign_in" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/margin_padding_size_medium"
                android:gravity="center|bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/create_account"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/fragment_sign_in_go_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_micro" />

            </LinearLayout>
        </LinearLayout>

        <include
            android:id="@+id/progress_layout"
            layout="@layout/progressbar"
            android:visibility="gone" />
    </FrameLayout>
</ScrollView>